syntax = "proto3";

option go_package = "github.com/brunodev09/common/api";

package api;

message Item {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    string priceId = 4;
}

message ItemsWithQuantity {
    string id = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customerId = 1;
    repeated ItemsWithQuantity Items = 2;
}

message Order {
    string id = 1;
    string customerId = 2;
    string status = 3;
    repeated Item Items = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}


